static/styles/portico.css
/* ... */
#pw_strength {
    /* Same width as a Bootstrap default text <input> with padding */
    width: 220px;
}

#registration #pw_strength {
    width: 325px;
    height: 8px;
    margin: -5px 0 0 0;
}

.def:before {
    content: " - ";
}

.api-details {
    margin-left: 2em;
}

.api-details ul {
    list-style-type: none;
}

.api-details dd {
    margin-bottom: 1em;
}

.python {
    display: none;
}

.commandline {
    display: none;
}

@media print {
    #portico-area {
        margin-left: 1.5em;
    }
}

.landing-page {
    padding: 2em 0em;
}

.landing-page-bottom {
    padding-bottom: 2em;
}

.landing-page h2,
.landing-page h4 {
    font-weight: lighter;
}

.landing-page p {
    font-size: 120%;
}

.laptop-image {
    width: 787px;
    height: 414px;
    background-image: url('/static/images/landing-page/laptop.png');
    background-size: contain;
}

.laptop-screen {
    position: relative;
    top: 32px;
    width: 507px;
}

.platform-icon {
    width: 33%;
}

.portico-page h1 {
    font-weight: 300;
}

.shaded-background {
    background-color: #ededed;
}

.darker-background {
    background-color: #474747;
    color: white;
}

.alert-hidden {
    display: none;
}

label.text-error {
    display: inline;

    padding-left: 5px;
}

input.text-error {
    border-color: red;
    outline-color: red;
}

.header,
.footer {
    position: absolute;
    z-index: 100;
    width: 100%;
    background-color: #52c2af;
}

.footer {
    margin: 30px 0px 10px 0px;
    height: 54px;
    background-color: transparent;
}

.header-main .logo {
    display: block;
    text-decoration: none;
    position: relative;
    line-height: 0.8;
}

.header-main .logo .brand-logo {
    width: 25px;
    margin-top: 3px;
}

.header-main .logo span {
    display: inline-block;
    vertical-align: top;
    margin-top: 8px;
    margin-left: 10px;

    color: #fff;
    font-size: 1.2rem;
    font-weight: 600;
    letter-spacing: 0.1em;
    text-transform: uppercase;
}

.header-main .portico-logo {
    height: 28px;
    width: auto;
    padding: 6px 0px 6px 0px;
}

.header-main .portico-simple-logo {
    height: 40px;
    width: auto;
}

.app {
    width: 100%;
    z-index: 99;
}

.main-headline {
    background-color: #bad2fa;
    background: url("/static/images/landing-page/gg.jpg");
    background-position: center;
    background-size: cover;
}


.feature-block {
    width: 49%;
    display: inline-block;
    vertical-align: top;
    margin-bottom: 20px;
}

.feature-block h4 {
    font-size: 22px;
    font-weight: 300;
    margin-left: 60px;
    margin-top: 0px;
}

.feature-block i {
    float: left;
    color: #7e98ad;
}

.feature-block p {
    margin-left: 60px;
}

.feature-block.left p,
.feature-block.left h4 {
    margin-right: 40px;
}

.feature-line.dark {
    background: #ddedf6;
    color: black;
}

.feature-line.light {
    background: white;
}


.feature-line .feature-text {
    width: 49%;
    display: inline-block;
    vertical-align: middle;
    margin-top: 30px;
    margin-bottom: 30px;
}

.feature-line .platform-text {
    width: 39%;
    text-align: left;
    display: inline-block;
    padding-top: 30px;
    padding-bottom: 30px;
    vertical-align: middle;
}

.feature-line .centered-content {
    text-align: center;
}

a.bottom-signup-button {
    color: #fff !important;
    text-decoration: none !important;
    font-size: 20px;
    padding: 20px;
    margin-top: 30px;
    margin-bottom: 30px;
    font-weight: 300;
}

.feature-line .platform {
    margin-left: 50px;
    text-align: center;
    display: inline-block;
    padding-top: 30px;
    padding-bottom: 30px;
}

.feature-line .platform-icons {
    display: inline-block;
    width: 60%;
    vertical-align: middle;
    text-align: right;
}

.platform-icon {
    font-size: 40px;
    display: block;
    padding-top: 30px;
    padding-bottom: 30px;
}

.feature-line .tagline {
    display: block;
    font-weight: 300;
    font-size: 30px;
    line-height: 32px;
}

.feature-line .description {
    display: block;
    font-size: 18px;
    line-height: 23px;
    padding-top: 20px;
}

.feature-illustration {
    width: 50%;
    display: inline-block;
    text-align: right;
}

.feature-image {
    display: inline-block;
    width: 100%;
    max-width: 422px;
    height: auto;
    margin-top: 30px;
    margin-bottom: 30px;
}

.feature-image.shadow {
    border-radius: 6px;
    box-shadow: 0px 0px 4px rgba(0,0,0,0.4);
}

.login-page,
.apps-page,
.register-page,
.portico-page,
.api-page {
    min-height: 100%;
    height: auto;
    margin-bottom: -54px;
}

.portico-page {
    /* height of the white portico navbar */
    min-height: calc(100% - 59px);
}

.signup-signature {
    margin-top: 20px;
    padding-bottom: 50px;
}

.devlogin_subheader {
    margin-top: 10px;
    margin-bottom: 20px;
    padding-top: 0px;
    text-align: center;
    font-size: 16px;
}

.terms-page-container,
.feature-page-container,
.apps-page-container,
.integrations-page-container,
.portico-page-container,
.api-page-container {
    padding-top: 50px !important;
}

.portico-page-container {
    padding-top: 0px !important;
}

.hello-footer {
    height: 54px !important;
}

.portico-page-header {
    font-weight: 300;
    font-size: 35px;
    display: block;
    padding-top: 40px;
    margin-bottom: 20px;
}

.portico-page-header .portico-page-header-icon {
    margin-right: 12px;
}

.portico-page-header a,
.portico-page-header a:hover {
    color: #000;
    text-decoration: none;
    display: inline-block;
}

.portico-large-text {
    font-size: 16px;
    line-height: 20px;
}

.portico-secondary-header {
    font-weight: 300;
    font-size: 25px;
}

.authors_row {
    width: 100%;
    table-layout: fixed;
}

.authors_row a {
    color: inherit;
}

.authors_row td {
    width: 100%;
    height: 100%;
    height: 120px;
    padding: 10px;
    transition: box-shadow 0.3s ease-in-out;
}

.authors_row td:hover {
    color: #00796B;
    box-shadow: 0px 0px 30px #B2DFDB;
}
/* ... */

