portico-pages: Fix flex height issues with content.
This fixes the existing issue where the titles of content is chopped
off when the screen height is too small.

--- a/static/styles/portico.css
+++ b/static/styles/portico.css
@@ -276,8 +276,7 @@ img.screenshot {
 
 #registration #pw_strength {
     width: 325px;
-    height: 8px;
-    margin: -5px 0 0 0;
+    margin-top: 20px;
 }
 
 .def:before {
